# mcp-gemini-google-search

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
guide/: TODO.md
src/: main.py
tests/: test_main.py
