[project]
name = "mcp-gemini-google-search"
version = "0.1.0"
description = "MCP server providing AI-powered Google search functionality using Gemini"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
mcp-gemini-google-search = "src.main:main"

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.6",
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
indent-width = 2

[tool.ruff.format]
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
